add 3d and other

--- a/delta/delta_before_info.ini
+++ b/delta/delta_before_info.ini
@@ -1,2 +1,2 @@
-./mongodump --db base -o /path/to/dump
-./mongorestore --db base --drop /path/to/dump
+./mongodump --db base collection -o /path/to/dump
+./mongorestore --db base collection --drop /path/to/dump
