add style to left

--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
     "forever-monitor": "^1.7.0",
     "fs": "0.0.2",
     "geolang-express": "^1.0.0",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-concat-css": "^2.3.0",
+    "gulp-cssmin": "^0.1.7",
     "gulp-react": "^3.1.0",
+    "gulp-stylus": "^2.6.0",
+    "gulp-uglify": "^2.0.1",
+    "gulp-watch": "^4.3.11",
     "i18n-express": "^1.0.4",
     "jade": "~1.11.0",
     "mongodb": "^2.1.4",
